testdata/multidoc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example-namespace
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: example-sa
  namespace: example-namespace
